UI: Prevent HTML id and class attribute from overflowing

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -1953,7 +1953,6 @@ button.enabled, button.active {
 #pagesTree ._html_class_ {
 	margin-top: -1px;
 	display: inline-block;
-	vertical-align: top;
 }
 
 .node .linkable {
@@ -4643,6 +4642,8 @@ i.fa.ps {
 }
 
 .class-id-attrs {
+	vertical-align: text-top;
+	line-height: 1.3em;
 	pointer-events: none;
 }
 
